week7 hw3 css adjustment

--- a/homeworks/week7/hw3/css/style.css
+++ b/homeworks/week7/hw3/css/style.css
@@ -121,3 +121,8 @@ button:hover {
     border-bottom: 2px solid #000;
     margin-bottom: 20px;
 }
+
+.done li label {
+    text-decoration: line-through;
+    color: #888;
+}
